libs/slim/test/typecheck/fail/duplicate_declaration.shader
shader vertex {
    int foo;
    float foo;
    return vec4(0.0, 0.0, 0.0, 1.0);
}
